--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <title>Frontend Mentor | Testimonials Grid Section Main</title>
   </head>
   <body>
-    <section>
+    <main>
       <article class="daniel-clifford-profile">
         <div class="header-container">
           <img
@@ -23,7 +23,7 @@
             class="profile-icon"
           />
           <header>
-            <h2>Daniel Clifford</h2>
+            <h3>Daniel Clifford</h3>
             <p>Verified Graduate</p>
           </header>
         </div>
@@ -53,7 +53,7 @@
             class="profile-icon"
           />
           <header>
-            <h2>Jonathan Walters</h2>
+            <h3>Jonathan Walters</h3>
             <p>Verified Graduate</p>
           </header>
         </div>
@@ -75,7 +75,7 @@
             class="profile-icon"
           />
           <header>
-            <h2>Kira Whittle</h2>
+            <h3>Kira Whittle</h3>
             <p>Verified Graduate</p>
           </header>
         </div>
@@ -106,7 +106,7 @@
             class="profile-icon"
           />
           <header>
-            <h2>Jeanette Harmon</h2>
+            <h3>Jeanette Harmon</h3>
             <p>Verified Graduate</p>
           </header>
         </div>
@@ -127,7 +127,7 @@
             class="profile-icon"
           />
           <header>
-            <h2>Patrick Abrams</h2>
+            <h3>Patrick Abrams</h3>
             <p>Verified Graduate</p>
           </header>
         </div>
@@ -147,7 +147,7 @@
           </p>
         </div>
       </article>
-    </section>
+    </main>
 
     <div class="attribution">
       Challenge by
